Fix apexchart tooltip styling in dark mode

--- a/src/scss/_dark.scss
+++ b/src/scss/_dark.scss
@@ -94,6 +94,17 @@
     color: inherit !important;
   }
 
+  .apexcharts-tooltip {
+    background: $dark !important;
+    border: 1px solid $dark-mode-lighten-10 !important;
+    box-shadow: 2px 2px 6px -4px $dark-mode-darken !important;
+
+    .apexcharts-tooltip-title {
+      background: $dark !important;
+      border-bottom: 1px solid $dark-mode-lighten-10 !important;
+    }
+  }
+
   .navbar-brand-autodark {
     @include autodark-image;
   }
